--- a/demo/components/demo/demo.component.html
+++ b/demo/components/demo/demo.component.html
@@ -7,7 +7,7 @@
       </template>
       <template vcl-tab-content>
         <!--<demo-content *ngIf="tab.type==='component'" [component]="tab.content"></demo-content>-->
-        <div *ngIf="tab.type==='component'" [connectWormhole]="tab.content"></div>
+        <div *ngIf="tab.type==='component'" [wormhole]="tab.content"></div>
         <markdown *ngIf="tab.type==='markdown'" [markdown]="tab.content"></markdown>
         <div *ngIf="tab.type==='text'"><pre>{{tab.content}}</pre></div>
         <div *ngIf="tab.type==='html'" [innerHtml]="tab.content"></div>
