--- a/src/components/popover/popover.component.html
+++ b/src/components/popover/popover.component.html
@@ -6,7 +6,7 @@
   [targetAttachment]="targetAttachment"
   [attachment]="attachment">
   <div [ngStyle]="style" [@popOverState]="state"
-  (off-click)="offClick()">
+  (offClick)="offClick()">
     <ng-content></ng-content>
   </div>
 </vcl-tether>
