Update logo url

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -2,7 +2,7 @@
   <header class="vclApplicationHeader vclLayoutHorizontal vclLayoutCenter vclLayoutJustified">
     <div role="banner">
       <a href="#" class="vclLayoutHorizontal vclLayoutCenter">
-        <img class="vclResponsiveImage vclLogo" role="presentation" src="https://cdn.rawgit.com/ng-vcl/ng-vcl/master/gfx/angular_vcl.svg">
+        <img class="vclResponsiveImage vclLogo" role="presentation" src="https://cdn.rawgit.com/ng-vcl/ng-vcl/master/gfx/angular_vcl_logo_square.png">
         <h1 class="vclAppName">Angular VCL Demo Browser</h1>
       </a>
     </div>
