--- a/src/components/button/button.component.html
+++ b/src/components/button/button.component.html
@@ -1,7 +1,7 @@
 <vcl-icogram
-  [label]="label$ | async "
+  [label]="label"
   [flexLabel]="flexLabel"
-  [prepIcon]="prepIcon$ | async"
-  [appIcon]="appIcon$ | async">
+  [prepIcon]="prepIcon"
+  [appIcon]="appIcon">
   <ng-content></ng-content>
 </vcl-icogram>
