flip-switch: support 2-way-binding

--- a/demo/components/flip-switch/flip-switch.component.html
+++ b/demo/components/flip-switch/flip-switch.component.html
@@ -1,5 +1,6 @@
-<h3>Normal</h3>
-<vcl-flip-switch onLabel="On" offLabel="Off" (change)="onChange($event)"></vcl-flip-switch>
+<h3>2-way-binding</h3>
+<vcl-flip-switch onLabel="On" offLabel="Off" [(value)]="value"></vcl-flip-switch><br>
+Current value: {{value}}
 
 <h3>Preset "on"</h3>
-<vcl-flip-switch [value]="true" onLabel="On" offLabel="Off" (change)="onChange($event)"></vcl-flip-switch>
+<vcl-flip-switch value="true" onLabel="On" offLabel="Off" (change)="onChange($event)"></vcl-flip-switch>
