--- a/src/components/token/tokenlist.component.html
+++ b/src/components/token/tokenlist.component.html
@@ -1,4 +1,5 @@
 <vcl-token *ngFor="let token of tokens"
  [(selected)]="token.selected"
+ [(removeable)]="token.removeable"
  [label]="token.label"
  (tap)="token.selected=!token.selected;change();"></vcl-token>
