--- a/demo/components/tab-nav/tab-nav.component.html
+++ b/demo/components/tab-nav/tab-nav.component.html
@@ -3,14 +3,14 @@
 <vcl-tab-nav >
   <vcl-tab>
     <template vcl-tab-label>Tab1</template>
-    <template vcl-tab-content>Content1</template>
+    Content1
   </vcl-tab>
   <vcl-tab>
     <template vcl-tab-label>Tab2</template>
-    <template vcl-tab-content>Content2</template>
+    Content2
   </vcl-tab>
   <vcl-tab [disabled]="true"><template vcl-tab-label>Tab3 disabled</template>
-    <template vcl-tab-content>Content3</template>
+    Content3
   </vcl-tab>
 </vcl-tab-nav>
 
@@ -21,11 +21,11 @@
 <vcl-tab-nav layout="right" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
   <vcl-tab>
     <template vcl-tab-label>Tab1</template>
-    <template vcl-tab-content>Content1</template>
+    Content1
   </vcl-tab>
   <vcl-tab>
     <template vcl-tab-label>Tab2</template>
-    <template vcl-tab-content>Content2</template>
+    Content2
   </vcl-tab>
 </vcl-tab-nav>
 
@@ -36,11 +36,11 @@
 <vcl-tab-nav layout="left" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
   <vcl-tab>
     <template vcl-tab-label>Tab1</template>
-    <template vcl-tab-content>Content1</template>
+    Content1
   </vcl-tab>
   <vcl-tab>
     <template vcl-tab-label>Tab2</template>
-    <template vcl-tab-content>Content2</template>
+    Content2
   </vcl-tab>
 </vcl-tab-nav>
 
@@ -51,11 +51,11 @@
 <vcl-tab-nav borders=true>
   <vcl-tab>
     <template vcl-tab-label>Tab1</template>
-    <template vcl-tab-content>Content1</template>
+    Content1
   </vcl-tab>
   <vcl-tab>
     <template vcl-tab-label>Tab2</template>
-    <template vcl-tab-content>Content2</template>
+    Content2
   </vcl-tab>
 </vcl-tab-nav>
 
@@ -68,5 +68,5 @@
   <vcl-tab>
     <template vcl-tab-label>Tab2</template>
   </vcl-tab>
-  <template vcl-tab-content>Shared Content Tab: {{tabIndex}}</template>
+  Shared Content Tab: {{tabIndex}}
 </vcl-tab-nav>
