FIX small bugs as discussed

--- a/demo/app.css
+++ b/demo/app.css
@@ -2558,6 +2558,7 @@ figure figcaption {
 }
 
 .vclFlipSwitch {
+  display: block;
   outline: none;
   background-color: transparent;
   position: relative;
