--- a/demo/components/json-editor/json-editor.component.html
+++ b/demo/components/json-editor/json-editor.component.html
@@ -1,7 +1,4 @@
-JSON-Editor:
-
-<br/>
-<br/>
+<h3>JSON-Editor:</h3>
 <br/>
 
 <vcl-json-editor [value]="myObject" class="myclass1 myclass2"></vcl-json-editor>
