--- a/demo/components/radio-group/radio-group.component.html
+++ b/demo/components/radio-group/radio-group.component.html
@@ -1,12 +1,9 @@
+
+<h3>Normal:</h3>
 <vcl-radio-group [options]="options" [(ngModel)]="value"></vcl-radio-group>
-
-Value: {{value}}
-
-<br/><br/><br/>
-
-
-
+State: {{value}}
+<br/>
+<br/>
 <h3>With preselected value:</h3>
 <vcl-radio-group [options]="options2" [(ngModel)]="value2"></vcl-radio-group>
-
-Value: {{value2}}
+State: {{value2}}
