--- a/demo/components/slider/slider.component.html
+++ b/demo/components/slider/slider.component.html
@@ -1,14 +1,14 @@
-basic: <br/>
+<h3>basic:</h3>
 <vcl-slider [min]="0" [max]="100" [step]="20" [round]="0"
 [value]="30" [scaleNames]="customScaleNames"></vcl-slider>
 
 
-<br/><br/><br/><br/> steps only: <br/>
+<h3>steps only:</h3>
 <vcl-slider [min]="0" [max]="100" [step]="20" [round]="0"
 [value]="30" [scaleNames]="customScaleNames2" [stepsOnly]="true">
 </vcl-slider>
 
 
 
-<br/><br/><br/><br/> default only: <br/>
+<h3>default only:</h3>
 <vcl-slider></vcl-slider>
