--- a/demo/components/dropdown/dropdown.component.html
+++ b/demo/components/dropdown/dropdown.component.html
@@ -1,34 +1,29 @@
-single-select:
-<br>
+<h3>single-select:</h3>
 <button vcl-button (tap)="expand()">Show/hide</button>
 <vcl-dropdown (change)="onSelect($event)" [(expanded)]="expanded" [items]="items" [maxSelectableItems]="1" [tabindex]="77"></vcl-dropdown>
 
-<br>
-<br> multi-select:
-<br>
+<br/>
+<h3>multi-select:</h3>
 <button vcl-button (tap)="expand2()">Show/hide</button>
 <vcl-dropdown (change)="onSelect($event)" [(expanded)]="expanded2" [items]="items2" [maxSelectableItems]="3" [tabindex]="77"></vcl-dropdown>
 
-<br>
-<br> marked items:
-<br>
+<br/>
+<h3>marked items:</h3>
 <button vcl-button (tap)="expand3()">Show/hide</button>
 <vcl-dropdown (change)="onSelect($event)" [expanded]="expanded3" [items]="itemsMarked" [maxSelectableItems]="3" [tabindex]="77"></vcl-dropdown>
 
-<br>
-<br> keyboard events:
-<br>
+<br/>
+<h3>keyboard events:</h3>
 <button vcl-button (tap)="expand4()">Show/hide</button>
 <vcl-dropdown (change)="onSelect($event)" [(expanded)]="expanded4" [items]="items3" [tabindex]="77" [listenKeys]="true"></vcl-dropdown>
 
-<br>
-<br> keyboard events (multiple):
-<br>
+<br/>
+<h3>keyboard events (multiple):</h3>
 <button vcl-button (tap)="expand4()">Show/hide</button>
 <vcl-dropdown (change)="onSelect($event)" [(expanded)]="expanded5" [items]="items5" [tabindex]="77" [maxSelectableItems]="3" [listenKeys]="true"></vcl-dropdown>
-<br>
-<br> options via content-child:
-<br>
+
+<br/>
+<h3>options via content-child:</h3>
 <button vcl-button (tap)="expand5()">Show/hide</button>
 <vcl-dropdown (change)="onSelect($event)" [(expanded)]="expanded6" [tabindex]="77" [maxSelectableItems]="1" [listenKeys]="true">
   <vcl-dropdown-option value="1">Item 1</vcl-dropdown-option>
