--- a/demo/components/radio-button/radio-button.component.html
+++ b/demo/components/radio-button/radio-button.component.html
@@ -1,26 +1,23 @@
-Checkable:
+<h3>Checkable:</h3>
 <vcl-radio-button [(checked)]="isChecked" (change)="onChange($event)"></vcl-radio-button>
+<br/>
+<b>State:</b> {{isChecked}}
+<br>
+<button vcl-button (tap)="isChecked=false">Uncheck</button>
 
-<br><br>
-<b>Checked:</b> {{isChecked}}
-
-<br><br>
-<button vcl-button (tap)="isChecked=false">Uncheck radio button</button>
-
-<br><br>
-Disabled:
+<br>
+<h3>Disabled:</h3>
 <vcl-radio-button [disabled]="true"></vcl-radio-button>
 
 <br>
-<br>
-<br>
-Radio-Button with label:
-<br>
+<h3>With label:</h3>
+
+<h4>right:</h4>
 <vcl-radio-button [(checked)]="isChecked2" labelPosition="right">
   <label vcl-form-control-label label="rightLabel" subLabel="SubRightLabel"></label>
 </vcl-radio-button>
-<br>
-<br>
+
+<h4>left:</h4>
 <vcl-radio-button [(checked)]="isChecked3" labelPosition="left">
   <label vcl-form-control-label label="rightLabel" subLabel="SubRightLabel"></label>
 </vcl-radio-button>
