--- a/demo/components/textarea/textarea.component.html
+++ b/demo/components/textarea/textarea.component.html
@@ -1,3 +1,6 @@
-Textarea with autogrow (minRows=5, maxRows=10) <br>
-<textarea vcl-textarea [(ngModel)]="data1" [autogrow]="true" [minRows]="5" [maxRows]="10"></textarea>
+<h3>Default</h3>
+<textarea vcl-textarea [(ngModel)]="data1"></textarea>
 
+
+<h3>Textarea with autogrow (minRows=5, maxRows=10)</h3>
+<textarea vcl-textarea [(ngModel)]="data2" [autogrow]="true" [minRows]="5" [maxRows]="10"></textarea>
