--- a/demo/components/form-control-label/form-control-label.component.html
+++ b/demo/components/form-control-label/form-control-label.component.html
@@ -1,30 +1,24 @@
-Non-wrapping label:
-
-<br>
-
+<h3>Non-wrapping label:</h3>
 <label vcl-form-control-label label="Label text" subLabel="Sub label text" for="form-control-label-demo-checkbox-1"></label>
 <vcl-checkbox [(checked)]="checkBox1Checked" id="form-control-label-demo-checkbox-1"></vcl-checkbox>
 
 <br>
-<br>
 
-Wrapping label:<br>
-
+<h3>Wrapping label:</h3>
 <label vcl-form-control-label label="Label 2 text" subLabel="Sub label 2 text">
   <vcl-checkbox [(checked)]="checkBox2Checked" id="form-control-label-demo-checkbox-2"></vcl-checkbox>
 </label>
 
-Disabled label:<br>
+<h3>Disabled label:</h3>
 
 <label vcl-form-control-label label="Label 3 disabled" disabled=true></label>
 
-Required label:<br>
+<h3>Required label:</h3>
 
 <label vcl-form-control-label label="Label 3 required" required=true requiredIndLabel="reqLabel"></label>
 
-Wrapped label:<br>
+<h3>Wrapped label:</h3>
 
 <label vcl-form-control-label label="Label 3 disabled" wrapping=true>
   <vcl-checkbox [(checked)]="checkBox2Checked" id="form-control-label-demo-checkbox-2"></vcl-checkbox>
 </label>
-
